--- a/css/index.css
+++ b/css/index.css
@@ -39,5 +39,10 @@ a{
     box-shadow: 5px 5px 0px black;
     padding: 18px 20px;
     margin-right: 0;
+    transition: transform 100ms linear;
+}
 
+
+#button:hover {
+    transform: scale(1.03);
 }
