--- a/css/components/box.css
+++ b/css/components/box.css
@@ -1,7 +1,6 @@
 .box{
     display: inline-block;
-    background-color: #093568;
-    width: 630px;
+    background-color: #292D2F;
     box-shadow: 10px 10px 0px #000;
     text-align: center;
     padding: 42px 44px;
