Create section Skills

--- a/css/components/box.css
+++ b/css/components/box.css
@@ -3,6 +3,7 @@
     background-color: #292D2F;
     box-shadow: 10px 10px 0px #000;
     text-align: center;
+    border-radius: 12px;
     padding: 42px 44px;
 }
 
