--- a/css/components/main-section.css
+++ b/css/components/main-section.css
@@ -1,6 +1,7 @@
-.skills{
+.main-section{
     background-color: #00A17E;
     height: 720px;
     padding-top: 50px;
+    padding-bottom: 100px;
     border-bottom: 10px solid #093568;
 }
