--- a/css/components/main-box.css
+++ b/css/components/main-box.css
@@ -1,4 +1,4 @@
-.box{
+.main-box{
     display: inline-block;
     background-color: #292D2F;
     box-shadow: 10px 10px 0px #000;
@@ -7,6 +7,6 @@
     padding: 42px 44px;
 }
 
-.box .title{
+.main-box .main-title{
     margin-bottom: 28px;
 }
