--- a/css/components/main-skills.css
+++ b/css/components/main-skills.css
@@ -1,15 +1,21 @@
 .main-skills{
     display: flex;
+    align-items: center;
     font-family: "Press Start 2P", sans-serif;
     font-size: 25px;
     color: #fff;
 }
 .main-skills .icon{
     margin-right: 25px;
+    width: 90px;
 }
 
 .main-skills .right{
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
+}
+
+.main-skills .title{
+    margin-bottom: 10px;
 }
