--- a/css/components/main-section.css
+++ b/css/components/main-section.css
@@ -14,3 +14,8 @@
     border-bottom: 10px solid #00A17E;
     height: 400px;
 }
+
+.main-section.-BGblue{
+    background-color: #093568;
+    border-bottom: 10px solid #000;
+}
