--- a/css/components/main-carousel.css
+++ b/css/components/main-carousel.css
@@ -39,6 +39,6 @@
 .main-carousel .elements{
     display: flex;
     justify-content: space-between;
-    transform: translateX(800px);
     width: 50%;
+    transition: transform 100ms ease-in-out;
 }
