--- a/css/components/card-project.css
+++ b/css/components/card-project.css
@@ -13,3 +13,8 @@
     background-color: #048ABF;
     margin-left: 85px;
 }
+
+.card-project.-wine{
+    background-color: #51262F;
+    margin-left: 85px;
+}
