--- a/css/components/main-button.css
+++ b/css/components/main-button.css
@@ -8,9 +8,15 @@
     font-size: 20px;
     color: #FFF;
     text-decoration: none;
+    cursor: pointer;
 }
 
 
 .main-button:hover {
     transform: scale(1.03);
+}
+
+.main-button.-blueBtn{
+    width: 100%;
+    background-color:#093568;
 }
