correcting project card bug

--- a/css/components/card-project.css
+++ b/css/components/card-project.css
@@ -6,15 +6,18 @@
     width: 280px;
     height: 280px;
     margin-right: 70px;
+    border-radius: 12px;
     box-shadow: 10px 10px 0px #FFFFFF;
 }
 
 .card-project.-blue{
     background-color: #048ABF;
-    margin-left: 85px;
 }
 
 .card-project.-wine{
     background-color: #51262F;
-    margin-left: 85px;
+}
+
+.card-project .action{
+    margin-right: 0;
 }
